--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
     <p>first Change</p>
-=======
 
  
    <h1>this is a heading</h1>
     <p>this is a pargraph</p>
 
->>>>>>> add some html
+
+   <h1>this is a heading</h1>
+   <p>this is a pargraph</p>
     <script src="main.css"></script>
 </body>
 </html>
