add another paragraph

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
    <h1>this is a heading</h1>
    <p>this is a pargraph</p>
+    <p>this is another paragraph</p>
     <script src="main.css"></script>
 </body>
 </html>
