--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p>first Change</p>
+  </head>
+  <body>
+    <h1>this is a heading</h1>
 
- 
-   <h1>this is a heading</h1>
+    <p>first Change</p>
+    
     <p>this is a pargraph</p>
 
-
-   <h1>this is a heading</h1>
-   <p>this is a pargraph</p>
+    <p>this is a pargraph</p>
     <p>this is another paragraph</p>
     <script src="main.css"></script>
-</body>
+  </body>
 </html>
